crates/griffe-cli/tests/snapshots/cli_integration__bank_help_is_a_stable_interface_contract.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Relevés bancaires : import et rapprochement

Usage: griffe bank [OPTIONS] <COMMAND>

Commands:
  import       Importe un relevé bancaire : l'export CSV de votre banque tel quel, un OFX, ou l'Excel (xlsx) de Tiime
  rm           Supprime une transaction importée par erreur (non rapprochée). Nécessite confirmation humaine quand `--actor agent:...`
  list         Liste les transactions importées, les plus récentes d'abord (`--unmatched` pour ne voir que celles restant à rapprocher)
  reconcile    Rapproche un crédit importé avec une facture (crée l'encaissement correspondant) — pour un débit et une dépense, voir `expense reconcile` / `expense record --transaction`
  unreconcile  Défait un rapprochement : libère la transaction et annule l'encaissement qui en était issu (pour un rapprochement historique sans lignée, seule la transaction est libérée — annulez le paiement via `payment void`). Pour un débit rapproché d'une dépense, la dépense reste, seule la transaction est libérée
  settle       Règle un compte de bilan depuis un mouvement du relevé (lot 37) — ni charge ni produit : une dette reprise au bilan d'ouverture (401 honoraires, 444 solde d'IS, 4455 TVA), un compte courant d'associé (455), des dividendes (457), un virement entre vos comptes (580), un emprunt (164). Le libellé vient du plan de comptes ; `--label` pour un compte hors plan. Nécessite confirmation humaine quand `--actor agent:...`
  unsettle     Défait un règlement de compte de bilan : la transaction redevient « à rapprocher »
  help         Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `FREEFLOW_DB`
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
