crates/griffe-cli/tests/snapshots/cli_integration__client_create_json_output_matches_the_documented_shape.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: value
---
{
  "result": "[client_id]",
  "status": "applied"
}
