crates/griffe-cli/tests/snapshots/cli_integration__expense_help_is_a_stable_interface_contract.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Dépenses professionnelles et TVA déductible

Usage: griffe expense [OPTIONS] <COMMAND>

Commands:
  record     Enregistre une dépense professionnelle
  attach     Joint (ou remplace) le justificatif d'une dépense — **même dans un exercice clôturé** : la pièce ne change ni le montant ni la date, et la facture du cabinet arrive souvent après la clôture. Le fichier est archivé chiffré dans `<coffre>.receipts/`
  receipt    Déchiffre le justificatif d'une dépense : dans `--out`, ou dans un fichier temporaire (0600) ouvert par le visualiseur par défaut
  list       Liste les dépenses, les plus récentes d'abord
  show       Affiche une dépense
  edit       Modifie une dépense existante — seuls les champs fournis changent, le reste est conservé tel quel. Refusé si sa date tombe dans un exercice déjà clôturé
  rm         Supprime une dépense pour de bon — le justificatif archivé, lui, reste en place (adressé par contenu, il peut être partagé par une autre dépense) et le débit du relevé rapproché, s'il y en a un, est libéré
  reconcile  Rapproche une dépense d'un débit du relevé importé, au montant exact (défaire : `bank unreconcile`)
  help       Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `GRIFFE_DB` (ou `FREEFLOW_DB`)
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
