crates/griffe-cli/tests/snapshots/cli_integration__follow_up_help_lists_the_moments.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Relances : file du jour, brouillon `.eml`, jamais d'envoi

Usage: griffe follow-up [OPTIONS] <COMMAND>

Commands:
  queue     La file du jour : en retard, dû aujourd'hui, brouillon ouvert
  board     Vue d'ensemble : toutes les relances actives
  show      Fiche d'une relance (piste, historique, aperçu du mail)
  from      Email d'expédition des brouillons
  draft     Prépare un brouillon `.eml` et l'ouvre dans le client mail (`xdg-open`)
  sent      Atteste que le mail est parti — avance la cadence
  skip      Saute l'étape courante sans envoyer
  snooze    Reporte à une date, sans changer d'étape
  schedule  Pose la prochaine date à la main (même étape)
  phrases   Les phrases de prospection, dans l'ordre
  moments   Les moments : en ajouter, en retirer, les déplacer, régler l'écart
  rewrite   Réécrit le nom, le sujet et la lettre d'un moment
  genres    Les genres. Les mots seulement : l'ordre et les écarts restent ceux du coffre
  genre     Crée, retire ou réécrit un genre, ou le pose sur un dossier
  keep      Garde le sujet et le corps de cette lettre pour ce genre, et ce moment
  retract   Annule le dernier geste (envoi, saut, report, brouillon)
  help      Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `GRIFFE_DB` (ou `FREEFLOW_DB`)
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
