crates/griffe-cli/tests/snapshots/cli_integration__human_outputs_are_sentences_and_tables_not_debug_dumps.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(calendar).unwrap()"
---
Échéance    Nature      Montant
2026-10-23  ca3         0,00 €
2026-12-15  cfe         —
2026-12-15  is_acompte  —

2026-10-23 ca3 : CA3 mensuelle, TVA de 2026-09 ; le 23 du mois (SA/SAS, siège à Paris/92/93/94, SIREN 55…) ; régime de TVA non renseigné, mensuel supposé
2026-12-15 cfe : montant établi par l'avis de CFE, non calculé ici
2026-12-15 is_acompte : dispense d'acompte (IS de référence < 3 000 €)
