crates/griffe-cli/tests/snapshots/cli_integration__invoice_help_is_a_stable_interface_contract.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Facturation : émission, import, avoir, vérification de la chaîne, balance âgée

Usage: griffe invoice [OPTIONS] <COMMAND>

Commands:
  emit          Émet une facture — nécessite confirmation humaine quand `--actor agent:...`
  import        Enregistre une facture née ailleurs (PA, outil tiers) — conserve son numéro, archive le fichier. Nécessite confirmation humaine quand `--actor agent:...`
  credit-note   Émet un avoir annulant intégralement une facture — même exigence de confirmation
  verify-chain  Revérifie la chaîne de hash de toutes les factures
  aged-balance  Balance âgée à une date donnée
  render        Rend une facture émise en PDF/A-3b avec le XML CII embarqué (Factur-X). Nécessite un profil d'entreprise défini (`griffe company set-profile`)
  help          Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `FREEFLOW_DB`
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
